--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       POSTGRES_DB: core-db
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
-    profiles: ["dev_front", "dev_back"]
+#    profiles: ["dev_front", "dev_back"]
     ports:
-      - "40000:5432"
+      - "6000:6000"
     volumes:
       - ./back/brm-core/migrations/:/docker-entrypoint-initdb.d/
       - core-data:/var/lib/postgresql/data
