[transport-api] add configs for local developing

--- a/back/transport-api/Dockerfile
+++ b/back/transport-api/Dockerfile
@@ -8,4 +8,4 @@ COPY . .
 RUN go mod download
 RUN go build -o transport-api-app cmd/server/main.go
 
-CMD ["./transport-api-app"]
+CMD ["./transport-api-app --docker"]
