[backend/brm-core] add configs for local developing

--- a/back/brm-core/Dockerfile
+++ b/back/brm-core/Dockerfile
@@ -8,4 +8,4 @@ COPY . .
 RUN go mod download
 RUN go build -o brm-core-app cmd/server/main.go
 
-CMD ["./brm-core-app"]
+CMD ["./brm-core-app --docker"]
