--- a/back/auth/config/config-docker.yml
+++ b/back/auth/config/config-docker.yml
@@ -17,3 +17,8 @@
 "http-server":
   "network": "auth"
   "port": 8082
+
+"app":
+  "refresh-token-length": 32
+  "refresh-token-expiration": 15 * 86400 * 1000000000 # 15 days
+  "access-token-expiration": 15 * 3600 * 1000000000 # 15 hours
