--- a/back/transport-api/config/config-local.yml
+++ b/back/transport-api/config/config-local.yml
@@ -2,6 +2,10 @@
   "host": "localhost"
   "port": 50000
 
+"grpc-ads-client":
+  "host": "localhost"
+  "port": 50002
+
 "http-server":
   "host": "localhost"
   "port": 8090
