--- a/back/auth/config/config-local.yml
+++ b/back/auth/config/config-local.yml
@@ -18,6 +18,11 @@
   "host": "localhost"
   "port": 8092
 
+"origins":
+  "web":
+    "host": "localhost"
+    "port": 4200
+
 "app":
   "refresh-token-length": 32
   "refresh-token-expiration": 15 * 86400 * 1000000000 # 15 days
