--- a/back/brm-ads/config/config-docker.yml
+++ b/back/brm-ads/config/config-docker.yml
@@ -9,6 +9,10 @@
   "host": "brm-core"
   "port": 50000
 
+"grpc-leads-client":
+  "host": "brm-leads"
+  "port": 50003
+
 "grpc-server":
   "network": "tcp"
   "port": 50002
