[back/brm-leads] add leads support to transporo api

--- a/back/transport-api/config/config-docker.yml
+++ b/back/transport-api/config/config-docker.yml
@@ -6,6 +6,10 @@
   "host": "brm-ads"
   "port": 50002
 
+"grpc-leads-client":
+  "host": "brm-leads"
+  "port": 50003
+
 "http-server":
   "host": "transport-api"
   "port": 8090
