--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
 
   redis-stats:
     image: redis:7
-    container_name: redis_stats
+    container_name: redis-stats
     environment:
       REDIS_PASSWORD: root
       REDIS_DATABASES: 1
@@ -87,6 +87,7 @@ services:
       context: back/brm-core
       dockerfile: Dockerfile
     command: ./brm-core-app --docker
+    container_name: brm-core
     profiles: ["dev_front"]
     ports:
       - "50000:50000"
@@ -98,6 +99,7 @@ services:
       context: back/brm-ads
       dockerfile: Dockerfile
     command: ./brm-ads-app --docker
+    container_name: brm-ads
     profiles: ["dev_front"]
     ports:
       - "50002:50002"
@@ -109,6 +111,7 @@ services:
       context: back/brm-leads
       dockerfile: Dockerfile
     command: ./brm-leads-app --docker
+    container_name: brm-leads
     profiles: ["dev_front"]
     ports:
       - "50003:50003"
@@ -120,6 +123,7 @@ services:
       context: back/transport-api
       dockerfile: Dockerfile
     command: ./transport-api-app --docker
+    container_name: transport-api
     profiles: ["dev_front"]
     ports:
       - "8090:8090"
@@ -132,6 +136,7 @@ services:
       context: back/registration
       dockerfile: Dockerfile
     command: ./registration-app --docker
+    container_name: registration
     profiles: ["dev_front"]
     ports:
       - "8091:8091"
@@ -143,6 +148,7 @@ services:
       context: back/auth
       dockerfile: Dockerfile
     command: ./auth-app --docker
+    container_name: auth
     profiles: ["dev_front"]
     ports:
       - "50001:50001"
@@ -156,6 +162,7 @@ services:
       context: back/stats
       dockerfile: Dockerfile
     command: ./stats-app --docker
+    container_name: stats
     profiles: ["dev_front"]
     ports:
       - "50004:50004"
