--- a/back/auth/config/.env
+++ b/back/auth/config/.env
@@ -1,5 +1,5 @@
 POSTGRES_PASSWORDS_PASSWORD=root
-REDIS_TOKENS_PASSWORD=root
+REDIS_TOKENS_PASSWORD=
 
-PASSWORDSALT=silverfatt
-SIGNKEY=banket
+PASSWORDSALT=aaa
+SIGNKEY=aaa
