--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,6 @@ services:
       - ./back/brm-leads/migrations/:/docker-entrypoint-initdb.d/
       - leads-data:/var/lib/postgresql/data
 
-
   redis-stats:
     image: redis:7
     container_name: redis-stats
@@ -82,6 +81,19 @@ services:
     volumes:
       - stats-data:/root/redis
 
+  postgres-notifications:
+    image: postgres:15.5
+    container_name: postgres-notifications
+    environment:
+      POSTGRES_DB: notifications-db
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+    profiles: ["dev_front", "dev_back"]
+    ports:
+      - "5504:5432"
+    volumes:
+      - ./back/notifications/migrations/:/docker-entrypoint-initdb.d/
+      - notifications-data:/var/lib/postgresql/data
 
   brm-core:
     build:
@@ -170,6 +182,17 @@ services:
     depends_on:
       - redis-stats
 
+  notifications:
+    build:
+      context: back/notifications
+      dockerfile: Dockerfile
+    command: ./notifications-app --docker
+    container_name: notifications
+    profiles: ["dev_front"]
+    ports:
+      - "50005:50005"
+    depends_on:
+      - postgres-notifications
 
 volumes:
   core-data:
@@ -178,3 +201,4 @@ volumes:
   ads-data:
   leads-data:
   stats-data:
+  notifications-data:
