--- a/back/brm-leads/config/config-local.yml
+++ b/back/brm-leads/config/config-local.yml
@@ -13,6 +13,10 @@
   "host": "localhost"
   "port": 50002
 
+"grpc-notifications-client":
+  "host": "localhost"
+  "port": 50005
+
 "grpc-server":
   "network": "tcp"
   "port": 50003
