--- a/back/transport-api/config/config-docker.yml
+++ b/back/transport-api/config/config-docker.yml
@@ -11,6 +11,9 @@
   "stats":
     "host": "stats"
     "port": 50004
+  "notifications":
+    "host": "notifications"
+    "port": 50005
 
 "http-server":
   "host": "transport-api"
