--- a/back/brm-leads/config/config-docker.yml
+++ b/back/brm-leads/config/config-docker.yml
@@ -5,17 +5,16 @@
   "dbname": "leads-db"
   "sslmode": "disable"
 
-"grpc-core-client":
-  "host": "brm-core"
-  "port": 50000
-
-"grpc-ads-client":
-  "host": "brm-ads"
-  "port": 50002
-
-"grpc-notifications-client":
-  "host": "notifications"
-  "port": 50005
+"grpc-clients":
+  "core":
+    "host": "brm-core"
+    "port": 50000
+  "ads":
+    "host": "brm-ads"
+    "port": 50002
+  "notifications":
+    "host": "notifications"
+    "port": 50005
 
 "grpc-server":
   "network": "tcp"
