--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /back/brm-core/migrations/core-test-data-init.sql
 /back/auth/config/.env
 /back/stats/config/.env
+/back/images/config/.env
 /back/transport-api/config/.env
 .vscode
